--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "^29.5.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.3",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
