--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
+    "start": "node dist/index.js",
+    "start:dev": "nodemon src/index.ts",
+    "build": "tsc --build",
     "test": "jest --coverage",
     "test-watch": "jest --watch"
   },
@@ -20,11 +22,11 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "dotenv": "^16.3.1",
     "mongoose": "^7.3.1",
     "socket.io": "^4.7.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "typescript": "^5.1.6",
     "winston": "^3.10.0"
   },
   "devDependencies": {
@@ -37,6 +39,6 @@
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1"
+    "typescript": "^5.1.6"
   }
 }
