--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 # test db config
 TEST_DB_USERNAME=root
-TEST_DB_NAME=hodcrm_test
+TEST_DB_NAME=
 # prod db config
 PROD_DB_USERNAME=
 PROD_DB_PASSWORD=
@@ -17,8 +17,10 @@ DEV_DB_PORT=3306
 # twilio config
 TWILIO_ACCOUNT_SID=AC93192e5f41426b765bb60f32cc06dec3
 TWILIO_AUTH_TOKEN=599ea2d7f57bda35def470523b221eb9
-TWILIO_PHONE_NU
-MBER=+12025550100
+TWILIO_PHONE_NUMBER=+12025550100
 
 #server port
 PORT=3200
+
+
+#Zoom meeting
