--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@types/socket.io": "^3.0.2",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/winston": "^2.4.4",
+    "axios": "^1.5.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mongoose": "^7.3.1",
     "socket.io": "^4.7.1",
     "swagger-jsdoc": "^6.2.8",
